--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<section>
+		<nav>
+			<ul>
+				<li>
+					
+					<a href="https://www.youtube.com/">Home</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=4E69cKnUk7c">About us</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=pFwi2cp1t9Q">Contact us</a>
+				</li>
+			</ul>
+		</nav>
+	</section>
+	<section>
+		<video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
+		<video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></video>
+		<video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"></video>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
